--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -7,36 +7,36 @@
 # To get a newer version, you will need to update the SHA.
 # You can also reference a tag or branch, but the action may change without warning.
 
-name: Publish Docker image
+#name: Publish Docker image
 
-on:
-  release:
-    types: [published]
+# on:
+#   release:
+#     types: [published]
 
-jobs:
-  push_to_registry:
-    name: Push Docker image to Docker Hub
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v3
+# jobs:
+#   push_to_registry:
+#     name: Push Docker image to Docker Hub
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Check out the repo
+#         uses: actions/checkout@v3
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
-        with:
-          username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+#       - name: Log in to Docker Hub
+#         uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+#         with:
+#           username: ${{ secrets.DOCKER_USER }}
+#           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image
-        run: docker build -t drorganvidez/evidentia.io:${{ github.event.release.tag_name }} -f Dockerfile.prod .
-        env:
-          DOCKER_CLI_EXPERIMENTAL: enabled
+#       - name: Build and push Docker image
+#         run: docker build -t drorganvidez/evidentia.io:${{ github.event.release.tag_name }} -f Dockerfile.prod .
+#         env:
+#           DOCKER_CLI_EXPERIMENTAL: enabled
 
-      - name: Push Docker image to Docker Hub
-        run: docker push drorganvidez/evidentia.io:${{ github.event.release.tag_name }}
+#       - name: Push Docker image to Docker Hub
+#         run: docker push drorganvidez/evidentia.io:${{ github.event.release.tag_name }}
 
-      - name: Tag and push latest
-        run: docker tag drorganvidez/evidentia.io:${{ github.event.release.tag_name }} drorganvidez/evidentia.io:latest
-        env:
-          DOCKER_CLI_EXPERIMENTAL: enabled
-      - run: docker push drorganvidez/evidentia.io:latest
+#       - name: Tag and push latest
+#         run: docker tag drorganvidez/evidentia.io:${{ github.event.release.tag_name }} drorganvidez/evidentia.io:latest
+#         env:
+#           DOCKER_CLI_EXPERIMENTAL: enabled
+#       - run: docker push drorganvidez/evidentia.io:latest
