--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,9 +2,7 @@ name: Flask CI
 
 on:
   push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
 
 jobs:
   build:
@@ -43,4 +41,4 @@ jobs:
         export MYSQL_DATABASE=flask_base_db
         export MYSQL_USER=flask_base_user
         export MYSQL_PASSWORD=flask_base_pass
-        pytest app/tests/units.py
+        pytest app/tests/*.py
