--- a/.github/workflows/commits.yml
+++ b/.github/workflows/commits.yml
@@ -1,18 +1,18 @@
-# name: Commits Syntax Checker
+name: Commits Syntax Checker
 
-# on:
-#   pull_request:
-#     branches: [main]
-#     types: [opened, reopened, edited, review_requested, synchronize]
-#   push:
-#     branches:
-#       - "main"
-#   workflow_call:
+on:
+  pull_request:
+    branches: [main]
+    types: [opened, reopened, edited, review_requested, synchronize]
+  push:
+    branches:
+      - "main"
+  workflow_call:
 
-# jobs:
-#   check:
-#     name: Conventional Commits
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v2
-#       - uses: webiny/action-conventional-commits@v1.0.3
+jobs:
+  check:
+    name: Conventional Commits
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: webiny/action-conventional-commits@v1.0.3
