fix: requirements semantic-release added

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -73,7 +73,7 @@ jobs:
 
       - name: Semantic Release
         run: |
-          pip install semantic-release
+          pip install -r requirements.txt
           semantic-release version
           semantic-release changelog
           semantic-release upload
