--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -71,6 +71,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Install semantic-release
+        run: python -m pip install semantic-release==0.1.0
+
       - name: Semantic Release
         run: |
           python -m semantic_release version
