--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -76,9 +76,9 @@ jobs:
 
       - name: Semantic Release
         run: |
-          python -m semantic_release version
-          python -m semantic_release changelog
-          python -m semantic_release upload
+          python -m semantic_release.cli version
+          python -m semantic_release.cli changelog
+          python -m semantic_release.cli upload
 
   upload-to-docker-hub:
     runs-on: ubuntu-latest
