--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -69,16 +69,19 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          python -m pip install -r requirements.txt
+
+      - name: Install Node.js and npm
+        uses: actions/setup-node@v4
+        with:
+          node-version: '14'
 
       - name: Install semantic-release
-        run: python -m pip install semantic-release==0.1.0
+        run: npm install -g semantic-release@17
 
       - name: Semantic Release
         run: |
-          python -m semantic_release.cli version
-          python -m semantic_release.cli changelog
-          python -m semantic_release.cli upload
+          npx semantic-release
 
   upload-to-docker-hub:
     runs-on: ubuntu-latest
