--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -80,6 +80,7 @@ jobs:
         run: |
           npm install -g semantic-release@17
           npm install --save-dev @semantic-release/changelog
+          npm install --save-dev @semantic-release/exec
 
       - name: Semantic Release
         run: |
