--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -85,9 +85,16 @@ jobs:
           pip install wheel
           pip install twine
 
+      - name: Configure Git
+        run: |
+          git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
+          git config --global user.name "${{ secrets.GIT_USER_NAME }}"
+
       - name: Semantic Release
         run: |
           npx semantic-release
+        env:
+          GH_TOKEN: ${{ secrets.GIT_TOKEN }}
 
   upload-to-docker-hub:
     runs-on: ubuntu-latest
