--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -20,6 +20,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    needs: upload-to-docker-hub
 
     services:
       mysql:
@@ -57,7 +58,7 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    needs: test
+    needs: upload-to-docker-hub
 
     steps:
       - name: Checkout repository
@@ -100,7 +101,6 @@ jobs:
 
   upload-to-docker-hub:
     runs-on: ubuntu-latest
-    needs: release
 
     steps:
       - name: Checkout repository
@@ -115,12 +115,12 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
-      - name: Get Semantic Release version
-        id: get_version
-        run: echo "::set-output name=VERSION::$(npx semantic-release version)"
+      - name: Get latest tag
+        id: get_latest_tag
+        run: echo "::set-output name=TAG::$(git describe --tags $(git rev-list --tags --max-count=1))"
 
       - name: Build and push Docker image
         run: |
           docker buildx create --use
-          docker buildx build -t javifdez7/Programaze:${{ steps.get_version.outputs.VERSION }} -f Dockerfile .
-          docker push javifdez7/Programaze:${{ steps.get_version.outputs.VERSION }}
+          docker buildx build -t javifdez7/programaze:${{ steps.get_latest_tag.outputs.TAG }} -f Dockerfile .
+          docker push javifdez7/programaze:${{ steps.get_latest_tag.outputs.TAG }}
