--- a/.github/workflows/tests-and-tag-in-main.yml
+++ b/.github/workflows/tests-and-tag-in-main.yml
@@ -7,20 +7,17 @@
 # To get a newer version, you will need to update the SHA.
 # You can also reference a tag or branch, but the action may change without warning.
 
-name: run tests, release, upload to Docker-hub and deploy on Render
+name: run tests and generate a tag after push or accept a pull request directed to main
 
 on:
   pull_request: 
     branches: [ main ]
   push:
-    branches: [ main, github-actions-CI/CD ]
-    tags:
-      - '*'
+    branches: [ main ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    needs: upload-to-docker-hub
 
     services:
       mysql:
@@ -56,7 +53,7 @@ jobs:
         export MYSQL_PASSWORD=flask_base_pass
         pytest app/tests/*.py
 
-  release:
+  tag:
     runs-on: ubuntu-latest
     needs: upload-to-docker-hub
 
@@ -98,33 +95,3 @@ jobs:
           npx semantic-release
         env:
           GH_TOKEN: ${{ secrets.GIT_TOKEN }}
-
-  upload-to-docker-hub:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-
-      - name: Get latest release tag
-        id: get_latest_release_tag
-        run: echo "::set-output name=TAG::$(curl -s https://api.github.com/repos/${{ github.repository }}/tags/latest | jq -r .name)"
-
-      - name: Format Docker tag
-        id: format_docker_tag
-        run: echo "::set-output name=DOCKER_TAG::$(echo ${{ steps.get_latest_release_tag.outputs.TAG }} | cut -c 2-)"
-
-      - name: Build and push Docker image
-        run: |
-          docker buildx create --use
-          docker buildx build -t javifdez7/programaze:${{ steps.format_docker_tag.outputs.DOCKER_TAG }} -f Dockerfile.prod .
-          docker push javifdez7/programaze:${{ steps.format_docker_tag.outputs.DOCKER_TAG }}
