--- a/.github/workflows/tests-and-tag-in-main.yml
+++ b/.github/workflows/tests-and-tag-in-main.yml
@@ -13,7 +13,7 @@ on:
   pull_request: 
     branches: [ main ]
   push:
-    branches: [ main ]
+    branches: [ main, github-actions-CI/CD ]
 
 jobs:
   test:
