fix: debug mode

--- a/.github/workflows/tests-and-tag-in-main.yml
+++ b/.github/workflows/tests-and-tag-in-main.yml
@@ -94,6 +94,7 @@ jobs:
         run: |
           version=$(npx semantic-release --output json | jq -r .version)
           echo "VERSION=${version}" >> $GITHUB_ENV
+          npx semantic-release --debug
         env:
           GH_TOKEN: ${{ secrets.GIT_TOKEN }}
   
