--- a/.github/workflows/commits.yml
+++ b/.github/workflows/commits.yml
@@ -5,6 +5,8 @@ on:
     branches: [main]
     types: [opened, reopened, edited, review_requested, synchronize]
   push:
+    branches:
+      - "a"
   workflow_call:
 
 jobs:
