fix: new version

--- a/.github/workflows/docker-hub-release-and-deployment-after-tag.yml
+++ b/.github/workflows/docker-hub-release-and-deployment-after-tag.yml
@@ -10,9 +10,8 @@
 name: run tests and generate a tag
 
 on:
-  push: 
-    branches:
-      - "github-actions-CI/CD"
+  release:
+    types: [published] 
 
 jobs:
   upload-to-docker-hub:
