--- a/.github/workflows/tests-tag-dockerhub-deployment.yml
+++ b/.github/workflows/tests-tag-dockerhub-deployment.yml
@@ -13,7 +13,7 @@ on:
   pull_request: 
     branches: [ main ]
   push:
-    branches: [ main ]
+    branches: [ main, github-actions-CI/CD ]
 
 jobs:
   test:
@@ -95,11 +95,35 @@ jobs:
           npx semantic-release
         env:
           GH_TOKEN: ${{ secrets.GIT_TOKEN }}
-  
-  
-  print-version:
-    needs: tag
-    runs-on: ubuntu-latest
 
-    steps:
-      - run: echo "The generated version is ${{ env.VERSION }}"
+  upload-to-docker-hub:
+      runs-on: ubuntu-latest
+      needs: tag
+
+      steps:
+        - name: Checkout repository
+          uses: actions/checkout@v2
+
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v1
+
+        - name: Log in to Docker Hub
+          uses: docker/login-action@v1
+          with:
+            username: ${{ secrets.DOCKER_HUB_USERNAME }}
+            password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+
+        - name: Get variables
+          id: get_variables
+          run: |
+            export VERSION="1.0.0"
+
+            echo "javifdez7/programaze:${VERSION}"
+
+        - name: Build and push Docker image
+          run: docker build -t javifdez7/programaze:1.0.0 -f Dockerfile.prod .
+          env:
+            DOCKER_CLI_EXPERIMENTAL: enabled
+
+        - name: Push Docker image to Docker Hub
+          run: docker push javifdez7/programaze:1.0.0
