--- a/.github/workflows/tests-tag-dockerhub-deployment.yml
+++ b/.github/workflows/tests-tag-dockerhub-deployment.yml
@@ -127,3 +127,24 @@ jobs:
 
         - name: Push Docker image to Docker Hub
           run: docker push javifdez7/programaze:1.0.0
+
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '14'
+
+      - name: Install Dependencies
+        run: |  
+          python -m pip install --upgrade pip
+          pip install -r requirements.txts
+
+      - name: Deploy to Render
+        run: |
+          render deploy --token ${{ secrets.RENDER_TOKEN }} --dir .
