--- a/.github/workflows/tests-tag-dockerhub-deployment.yml
+++ b/.github/workflows/tests-tag-dockerhub-deployment.yml
@@ -143,7 +143,7 @@ jobs:
       - name: Install Dependencies
         run: |  
           python -m pip install --upgrade pip
-          pip install -r requirements.txts
+          pip install -r requirements-deploy.txt
 
       - name: Deploy to Render
         run: |
