--- a/.github/workflows/tests-tag-dockerhub-deployment.yml
+++ b/.github/workflows/tests-tag-dockerhub-deployment.yml
@@ -140,6 +140,11 @@ jobs:
         with:
           node-version: '14'
 
+      - name: Install Dependencies
+        run: |  
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
       - name: Deploy to Render
         run: |
           render deploy --token ${{ secrets.RENDER_TOKEN }} --dir .
