--- a/.github/workflows/tests-tag-dockerhub-deployment.yml
+++ b/.github/workflows/tests-tag-dockerhub-deployment.yml
@@ -1,19 +1,9 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-# GitHub recommends pinning actions to a commit SHA.
-# To get a newer version, you will need to update the SHA.
-# You can also reference a tag or branch, but the action may change without warning.
-
-name: run tests and generate a tag after push or accept a pull request directed to main
-
+name: run tests, generate a tag, upload to docker hub and deploy on render
 on:
   pull_request: 
     branches: [ main ]
   push:
-    branches: [ main, github-actions-CI/CD ]
+    branches: [ main ]
 
 jobs:
   test:
@@ -130,6 +120,8 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    needs: tag
+
     steps:
       - uses: actions/checkout@v3
       - name: Deploy
