--- a/.github/workflows/tests-tag-dockerhub-deployment.yml
+++ b/.github/workflows/tests-tag-dockerhub-deployment.yml
@@ -3,10 +3,10 @@ on:
   pull_request: 
     branches: [ main ]
   push:
-    branches: [ main, github-actions-CI/CD ]
+    branches: [ main ]
 
 jobs:
-  test:
+  run-tests:
     runs-on: ubuntu-latest
 
     services:
@@ -43,9 +43,9 @@ jobs:
         export MYSQL_PASSWORD=flask_base_pass
         pytest app/tests/*.py
 
-  tag:
+  generate-tag:
     runs-on: ubuntu-latest
-    needs: test
+    needs: run-tests
 
     steps:
       - name: Checkout repository
@@ -88,7 +88,7 @@ jobs:
 
   upload-to-docker-hub:
       runs-on: ubuntu-latest
-      needs: tag
+      needs: generate-tag
 
       steps:
         - name: Checkout repository
@@ -118,9 +118,9 @@ jobs:
         - name: Push Docker image to Docker Hub
           run: docker push javifdez7/programaze:1.0.0
 
-  deploy:
+  deploy-render:
     runs-on: ubuntu-latest
-    needs: tag
+    needs: generate-tag
 
     steps:
       - uses: actions/checkout@v3
