fix: database in tests CI/CD

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,23 +22,22 @@ jobs:
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.9
+    - name: Start Docker Compose
+      run: docker-compose -f docker-compose.dev.yml up -d
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+    - name: Wait for services to be ready
+      run: sleep 10s  # You may need to adjust the sleep duration based on your application's startup time
 
     - name: Set up database
       run: |
-        flask db migrate
-        flask db upgrade
-        python populate.py
+        docker exec -it web-container flask db migrate
+        docker exec -it web-container flask db upgrade
+
+    - name: Populate database
+      run: docker exec -it web-container python populate.py
 
     - name: Run Tests
       run: |
@@ -48,3 +47,6 @@ jobs:
         export MYSQL_USER=flask_base_user
         export MYSQL_PASSWORD=flask_base_pass
         pytest app/tests/*.py
+
+    - name: Stop Docker Compose
+      run: docker-compose -f docker-compose.dev.yml down
