--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,11 +33,11 @@ jobs:
 
     - name: Set up database
       run: |
-        docker exec -it web_container flask db migrate
-        docker exec -it web_container flask db upgrade
+        docker exec -T web_container flask db migrate
+        docker exec -T web_container flask db upgrade
 
     - name: Populate database
-      run: docker exec -it web_container python populate.py
+      run:  docker exec -T web_container python populate.py
 
     - name: Run Tests
       run: |
