--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,7 @@ jobs:
           MYSQL_USER: flask_base_user
           MYSQL_PASSWORD: flask_base_pass
         ports:
-          - 3306:3306
+          - 3307:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
@@ -30,6 +30,7 @@ jobs:
 
     - name: Set up database
       run: |
+        docker ps
         docker exec -i web_container flask db migrate
         docker exec -i web_container flask db upgrade
 
