--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Start Docker Compose
-      run: docker-compose -f docker-compose.dev.yml up -d
+      run: docker compose -f docker-compose.dev.yml up -d 
 
     - name: Set up database
       run: |
