--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,6 +15,9 @@ jobs:
     - name: Start Docker Compose
       run: docker compose -f docker-compose.dev.yml up -d 
 
+    - name: Install dependencies
+      run: pip install -r requirements.txt
+
     - name: Run Tests
       run: |
         export MYSQL_HOSTNAME=db
