--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,10 +13,13 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Start Docker Compose
-      run: docker compose -f docker-compose.dev.yml up -d 
+      run: docker-compose -f docker-compose.dev.yml up -d 
 
     - name: Install dependencies
       run: pip install -r requirements.txt
+
+    - name: Check container is running
+      run: docker ps
 
     - name: Run Tests
       run: docker exec -i web_container pytest app/tests/*.py
