fix: test CI/CD

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,6 +15,14 @@ jobs:
     - name: Start Docker Compose
       run: docker compose -f docker-compose.dev.yml up -d 
 
+    - name: Wait for container to be ready
+      run: |
+        echo "Waiting for web_container to be ready..."
+        while ! docker exec web_container pg_isready -h db -p 3306 > /dev/null 2>&1; do
+          sleep 1
+        done
+        echo "web_container is ready."
+        
     - name: Check container is running
       run: docker ps
 
