--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -20,5 +20,7 @@ RUN pip install --no-cache-dir --upgrade pip
 EXPOSE 5000
 
 # Run the migrations, execute populate.py and then start the application
-CMD flask db upgrade && python populate.py && flask run --host=0.0.0.0 --port=5000 --reload --debug
+CMD flask run --host=0.0.0.0 --port=5000 --reload --debug
+#flask db upgrade && python populate.py 
+#&& flask run --host=0.0.0.0 --port=5000 --reload --debug
 
