--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,6 +4,7 @@ services:
 
   web:
     container_name: web_container
+    mem_limit: 2g
     build:
       context: .
       dockerfile: Dockerfile.dev
