--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,7 +22,7 @@ jobs:
       run: docker ps
 
     - name: Run Tests
-      run: docker exec -i web_container pytest app/tests/*.py
+      run: docker exec -i web_container pytest app/tests/test_innosoft_day.py
 
 
     - name: Stop Docker Compose
