--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/checkout@v2
   
     - name: Start Docker Compose
-      run: docker-compose -f docker-compose.dev.yml up -d 
+      run: docker compose -f docker-compose.dev.yml up -d 
 
     - name: Start container
       run: docker start web_container db_container nginx_container
@@ -26,4 +26,4 @@ jobs:
 
 
     - name: Stop Docker Compose
-      run: docker-compose -f docker-compose.dev.yml down
+      run: docker compose -f docker-compose.dev.yml down
