--- a/.github/workflows/selenium.yml
+++ b/.github/workflows/selenium.yml
@@ -23,12 +23,9 @@ jobs:
         run: |
           docker run -d -p 4444:4444 --name selenium-container selenium/standalone-chrome
 
-  run_selenium_tests:
-    runs-on: ubuntu-latest
-
-    needs: deploy_infrastructure
-
-    steps:
+      - name: Wait for infrastructure to start
+        run: |
+          sleep 5
       - name: Checkout code
         uses: actions/checkout@v2
 
